fix image not showing

--- a/Style/index.css
+++ b/Style/index.css
@@ -12,7 +12,7 @@ body {
 .banner {
     width: 100%;
     height: 100dvh;
-    background-image: url(../media/heroBanner.jpg);
+    background-image: url('/Media/heroBanner.jpeg');
     background-size: 100% auto;
     background-position: center center;
     background-repeat: no-repeat;
